 7. Show search icon on search fields even for non-touch devices.
 8. Only apply larger left indent and right indent if queue is not pinned.
 9. If enabled, add 'Play shuffled' to context menus.
10. Attempt to detect iOS when manifest is asked for and serve iOS icon, and
    change start URL to have '?addpad'
11. Increase min-widths required for track list indentation.

4.1.0
-----
 1. Move track/album view selection into queue menu.
 2. Add left/right padding to lists if showing detailed sub-toolbar.
 3. Add left/right padding to MAI biography and review shown in browse view if
    also showing detailed sub-toolbar.
 4. Change to mobile-style cover/details/button layout for desktop now-playing
    bar based upon width.
 5. Reduce desktop now-playing bar height based upon width.
 6. Hide expand/collapse button from desktop toolbar if not wide enough, and
    place collapse button over cover.
 7. Swipe to hide/show unpinned queue in desktop layout.
 8. Only allow queue to be pinned if window width is 670px or more.
 9. Move now-playing cover emblem and buttons closer to edges.
10. Set maximum width for now-playing playback controls so that they are not too
    spread out.
11. Only allow editing a favourite if it has 'presetParams'
12. Animate mobile navigation 'pill'.
13. Add sort options to 'All songs' and 'Compositions'
14. Swipe to change volume on cover only.
15. Always place now-playing rating stars with text.
16. Draw play arrow next to icon in players menu for players which are playing.
17. If 'Appearance', or 'Composition', is single release type for an artist,
    then use that as the heading.
18. Only request extid (for emblems) in status request if emblems enabled in
    LMS.
19. If BlissMixer is installed, then add 'Radio' button to artist and album
    action menus.
20. Add support for displaying genre images.
21. Fix multi-disc headers when have more than 100 items.
22. Optionally show 'by', 'from', context in browse and queue.